tests/fixtures/invalid/tortura_recursividad.syn
#lang: es
funcion principal() -> nulo:
    desconocida()
